APPs/webcam/k8s/deployment.yaml
apiVersion: apps/v1                                                                                                                                                                                     
kind: Deployment                                                                                                                                                                                        
metadata:                                                                                                                                                                                                                                                                                                                                                                              
  labels:                                                                                                                                                                                               
    app: webcam                                                                                                                                                                                          
  name: webcam
  namespace: webcam                                                                                                                                                                                           
spec:                                                                                                                                                                                                   
  replicas: 1
  selector:
    matchLabels:
      app: webcam
  template:
    metadata:
      labels:
        app: webcam
    spec:
      serviceAccountName: privileged-sa
      containers:
      - image: quay.io/luisarizmendi/webcam:latest
        imagePullPolicy: Always
        name: webcam    
        volumeMounts:
        - mountPath: /dev/video0
          name: dev-video0
        securityContext:
          privileged: true
      volumes:
      - name: dev-video0
        hostPath:
          path: /dev/video0
      dnsPolicy: ClusterFirst
      restartPolicy: Always
