APPs/webcam/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcam
  namespace: webcam  
spec:
  selector:
    app: webcam
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
