APPs/webcam/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: watch
  namespace: webcam  
spec:
  port:
    targetPort: 8080 
  to:
    kind: Service
    name: webcam
    weight: 10
